tester/src/test/aya/failure/patterns/selection-failure.aya.txt
In file $FILE:8:6 ->

  6 |  | A, suc m => vcons A (Vect A m)
  7 | def mapImpl {A B : \Set} {n : Nat} (f : \Pi A -> B) (xs : Vect A n) : Vect B n
  8 |  | f, vnil => vnil {_}
            ^--^
  
Warning: Cannot match with `vnil` due to a failed index unification, treating as bind pattern
In file $FILE:8:14 ->

  6 |  | A, suc m => vcons A (Vect A m)
  7 | def mapImpl {A B : \Set} {n : Nat} (f : \Pi A -> B) (xs : Vect A n) : Vect B n
  8 |  | f, vnil => vnil {_}
                    ^------^
  
Error: The expected type `Vect A n` is not a pi type, therefore cannot type a term such as `vnil {_}`
Tycking interrupted due to error(s).
What are you doing?
